ref(index): insert h3 heading tag

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="./app.js"  defer></script>
 </head>
 <body>
-    <a href="./01 - JavaScript Drum Kit/index1.html">Day 1</a>
+    <h3>
+        <a href="./01 - JavaScript Drum Kit/index1.html">Day 1: Drum Kit</a>
+    </h3>
 </body>
 </html>
