--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <h3>
         <a href="./01 - JavaScript Drum Kit/index1.html">Day 1: Drum Kit</a>
     </h3>
+    <h3>
+        <a href="./02- CSS JS Clock/index2.html">Day 2: CSS + JS Clock</a>
+    </h3>
 </body>
 </html>
