feat(css variables): playing with css variables and JS

--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
     <h3>
         <a href="./02- CSS JS Clock/index2.html">Day 2: CSS + JS Clock</a>
     </h3>
+    <h3>
+        <a href="./03- CSS Variables and JS/index3.html">Day 3: Playing with CSS Variables and JS</a>
+    </h3>
 </body>
 </html>
