feat(array cardio): Array Cardio Day 1

--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
     <h3>
         <a href="./03- CSS Variables and JS/index3.html">Day 3: Playing with CSS Variables and JS</a>
     </h3>
+    <h3>
+        <a href="./04-Array Cardio Day 1/index4.html">Day 4: Array Cardio Day 1</a>
+    </h3>
 </body>
 </html>
