feat(Panel): Flex Panel Image

--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
     <h3>
         <a href="./04-Array Cardio Day 1/index4.html">Day 4: Array Cardio Day 1</a>
     </h3>
+    <h3>
+        <a href="./05- Flex Panels Image Gallery/index5.html">Day 5: Flex Panels Image Gallery</a>
+    </h3>
 </body>
 </html>
