feat(day 6)- Type Ahead

--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
     <h3>
         <a href="./05- Flex Panels Image Gallery/index5.html">Day 5: Flex Panels Image Gallery</a>
     </h3>
+    <h3>
+        <a href="./06- Type Ahead/index6.html">Day 6: Type Ahead</a>
+    </h3>
 </body>
 </html>
