feat(day 7): Array Cardio Day 2

--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
     <h3>
         <a href="./06- Type Ahead/index6.html">Day 6: Type Ahead</a>
     </h3>
+    <h3>
+        <a href="./07- Cardio Day 2/index.html">Day 7: Array Cardio Day 2</a>
+    </h3>
 </body>
 </html>
