feat(day 8): fun with HTML5 Canvas

--- a/index.html
+++ b/index.html
@@ -29,5 +29,8 @@
     <h3>
         <a href="./07- Cardio Day 2/index.html">Day 7: Array Cardio Day 2</a>
     </h3>
+    <h3>
+        <a href="./08- Fun with HTML5 Canvas/index.html">Day 8: Fun with HTML5 Canvas</a>
+    </h3>
 </body>
 </html>
