feat(11): HTML 5 Video Player

--- a/index.html
+++ b/index.html
@@ -32,5 +32,14 @@
     <h3>
         <a href="./08- Fun with HTML5 Canvas/index.html">Day 8: Fun with HTML5 Canvas</a>
     </h3>
+    <h3>
+        <a href="./09- Dev Tools Domination/index.html">Day 9: Dev Tools Domination</a>
+    </h3>
+    <h3>
+        <a href="./10- Hold Shift to Check Checkboxes/index.html">Day 10: Hold Shift to Check Checkboxes</a>
+    </h3>
+    <h3>
+        <a href="./11- Custom HTML5 Video Player/index.html">Day 11: Custom HTML5 Video Player</a>
+    </h3>
 </body>
 </html>
