feat(12): key sequence detection

--- a/index.html
+++ b/index.html
@@ -41,5 +41,8 @@
     <h3>
         <a href="./11- Custom HTML5 Video Player/index.html">Day 11: Custom HTML5 Video Player</a>
     </h3>
+    <h3>
+        <a href="./12- Key Sequence Detection (KONAMI CODE)/index.html">Day 12: Key Sequence Detection</a>
+    </h3>
 </body>
 </html>
