--- a/index.html
+++ b/index.html
@@ -44,5 +44,8 @@
     <h3>
         <a href="./12- Key Sequence Detection (KONAMI CODE)/index.html">Day 12: Key Sequence Detection</a>
     </h3>
+    <h3>
+        <a href="./13- Slide In On Scroll/index.html">Day 13: Slide In On Scroll</a>
+    </h3>
 </body>
 </html>
